Fixe du probleme de z-index sur la barre de navigation

--- a/css/side-bar.css
+++ b/css/side-bar.css
@@ -98,6 +98,7 @@ body{
 	background-color: white;
 	position: relative;
 	left: 50px;
+	z-index: -1;
 	box-shadow: 10px 10px 14px 0px rgba(199,199,199,0.75);
 	transition: 0.8s;
 }
